op_3896/ace-gold/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
  labels:
    app: ace-mh-mnt
  name: ace-mh-mnt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ace-mh-mnt
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ace-mh-mnt
    spec:
      containers:
      - env:
        - name: LICENSE
          value: accept
        - name: MQ_QMGR_NAME
          value: LQM.IXC
        - name: MQSI_PERSISTENT_MONITORING_EVENTS
          value: "1"
        image: registry.ixpress.icicibank.com:5000/ibm-ace-gold-prod:v1
        imagePullPolicy: Always
        name: ace-mh-mnt
        ports:
        - containerPort: 7600
          protocol: TCP
        - containerPort: 1414
          protocol: TCP
        - containerPort: 7800
          protocol: TCP
        - containerPort: 7843
          protocol: TCP
        - containerPort: 9157
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        - containerPort: 9483
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /home/aceuser/build
          name: aceuser
        - mountPath: /home/aceuser/ace-server/log
          name: volume-1
        - mountPath: /home/aceuser/ace-server/run
          name: volume-2
        - mountPath: /home/aceuser/ace-server/overrides
          name: volume-3
        - mountPath: /home/aceuser/ace-server/shared-classes
          name: volume-4
        - mountPath: /mnt/mqm
          name: volume-5
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - icici-elk.apps.nonprod.iciciltd.com
        ip: 172.19.65.72
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: aceuser
        persistentVolumeClaim:
          claimName: buildmh
      - name: volume-1
        persistentVolumeClaim:
          claimName: logsmh
      - name: volume-2
        persistentVolumeClaim:
          claimName: runmh
      - name: volume-3
        persistentVolumeClaim:
          claimName: overridesmh
      - name: volume-4
        persistentVolumeClaim:
          claimName: shared-classesmh
      - name: volume-5
        persistentVolumeClaim:
          claimName: data
