op_3896/ace-gold/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ace-mh-mnt
  name: ace-mh-mnt
spec:
  clusterIP: 172.30.123.165
  ports:
  - name: port-1
    port: 7600
    protocol: TCP
    targetPort: 7600
  - name: port-2
    port: 1414
    protocol: TCP
    targetPort: 1414
  - name: port-3
    port: 7800
    protocol: TCP
    targetPort: 7800
  - name: port-4
    port: 7843
    protocol: TCP
    targetPort: 7843
  - name: port-5
    port: 9157
    protocol: TCP
    targetPort: 9157
  - name: port-6
    port: 9443
    protocol: TCP
    targetPort: 9443
  - name: port-7
    port: 9483
    protocol: TCP
    targetPort: 9483
  selector:
    app: ace-mh-mnt
  type: ClusterIP
